sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:13: error: not found: value nbVal
    nbVal = getNombreValeurs()
    ^AlgBubbleSort1:15: error: not found: value nbVal
    for(i<-0 to nbVal){
                ^